--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		"rootDir": "src",
 		"strict": true,
 		"esModuleInterop": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"declaration": true,
+		"declarationDir": "types"
 	}
 }
